feat(client): add sort products

--- a/Client/products.html
+++ b/Client/products.html
@@ -29,8 +29,8 @@
                 <label for="sort"></label>
                 <select name="sort" id="sort">
                     <option value="none">No Sort</option>
-                    <option value="keyboard">Price Ascending</option>
-                    <option value="mouse">Price Descending</option>
+                    <option value="PriceAsc">Price Ascending</option>
+                    <option value="PriceDesc">Price Descending</option>
                 </select>
             </div>
         </section>
